la till egen css fil för grupp chatten

--- a/static/App.html
+++ b/static/App.html
@@ -6,6 +6,7 @@
 				<link type="text/css" href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.css" rel="stylesheet">
 
 	<link rel="stylesheet" href="./style/Main.css">
+	<link rel="stylesheet" href="./style/GroupChatt.css">
 	<title>Hem</title>
 </head>
 <body>
