--- a/static/index.html
+++ b/static/index.html
@@ -29,6 +29,7 @@
 	</div>
 
 <div id="login-div"><a href="#reg-and-log-container"><span>Logga in</span></a></div>
+		<div id="already-logged-in"><a href="/home">Redan inloggad?</a></div>
 </div>
 	<div id="reg-and-log-container">
 		<div id="form-container">
