La till gruppchatten och stylingen för den

--- a/static/App.html
+++ b/static/App.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8">
 		<link type="text/css" href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.css" rel="stylesheet">
 		<link rel="stylesheet" href="./style/App.css">
+		<link rel="stylesheet" href="./style/GroupChatt.css">
 		<script src="http://use.edgefonts.net/rancho:n4:all;roboto:n9,i9,n7,i7,i4,n3,i3,n5,i5,n4,n2,i2:all.js"></script>
 		<title>Hem</title>
 	</head>
